fix: delete fetched ROOT pages from external sources
see https://gravitee.atlassian.net/browse/GKO-447